=== Edge

* Added a RedCloth::EXTENSION_LANGUAGE constant so you can tell what version of the parser you are using. [Jason Garber]

* Added a NotCompiledError to give a friendlier message when people just unpack RedCloth into their projects. [Jason Garber]

* Added a pure-ruby version of the parser for times when you can't compile the C or Java extensions.  You should avoid using it if at all possible because it is 32 times slower (and has some other problems, too)! [Jason Garber]

* Ignore spaces and tabs on blank lines between blocks. #120 [Jason Garber]

* Allow HTML tags with quoted attributes to be inside link text.  To do this, I had to remove the possibility that attributes in HTML tags could have spaces around the equals sign or unquoted attributes.  This change also greatly expands the complexity of the state machine, so compilation takes a long time. Sorry. [Jason Garber]

* Many improvements to the LaTeX formatter by Bil Kleb, a NASA scientist who's been working with LaTeX for 20 years.  Thanks, Bil!

=== 4.1.9 / February 20, 2009

* Make compatible with Ruby 1.9.

* Image URLs and image titles can now contain parentheses. #71

* Handle caps properly in link titles. #77

* Remove extra preformatted line breaks after extended block code. #79

* Fix inline <notextile> being recognized as block <notextile>. #81

* Allow leading spaces on lists for backward compatibility with RedCloth 3.x. #89

* Recognize deleted phrases when they start at the beginning of a line. #83

* Fix escaped <code> tag when it has the class attribute and is in a <pre> tag. #95

* Fix dimensions and primes for LaTeX. #103

* Don't allow square brackets inside lang attribute so double square brackets are interpreted like Textile 2 and RedCloth 3. #101

* Improve LaTeX output for tables. #96

* Fix bad parsing of bracketed image links (which would hang the interpreter in some cases). #97

* Handle links containing parentheses.  Brackets are no longer required. #82 [Ryan Alyea]
