@@ -24,8 +24,9 @@ redcloth_attribute_parser(machine, self, p, pe)
   char *p, *pe;
 {
   int cs, act;
-  char *ts = 0, *te = 0, *reg = 0, *bck = NULL, *eof = NULL;
+  char *ts = 0, *te = 0, *reg = 0, *bck = NULL, *attr_reg = NULL, *eof = NULL;
   VALUE regs = rb_hash_new();
+  VALUE attr_regs = rb_hash_new();
 
   %% write init;
 
