@@ -1,0 +1,3 @@
+--color
+--require=spec/differs/inline.rb
+--diff=RedClothDiffers::Inline
